# aruku_interfaces

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-debian-nightly.yml  build-debian-stable.yml
msg/: Odometry.msg  SetConfig.msg  SetWalking.msg  Status.msg
proto/: aruku.proto
srv/: GetConfig.srv  SaveConfig.srv
